# rsds

./: Cargo.toml
src/: client.rs  connection.rs  core.rs  daskcodec.rs  notifications.rs  worker.rs
src/common/: wrapped.rs
src/scheduler/: schedproto.rs
src/scheduler/implementation/: scheduler.rs  task.rs  utils.rs  worker.rs
src/scheduler/interface/: remote.rs
