[package]
name = "rsds"
version = "0.1.0"
authors = ["Stanislav Bohm <spirali@kreatrix.org>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2.6", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
bytes = "0.5.3"
byteorder = "1.3"
smallvec = "1.1.0"
rmp-serde = "0.14.0"
#rmpv = "*"
log = "0.4"
pretty_env_logger="0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-tuple-vec-map = "0.2"
serde_json = "1.0"
quick-error = "1.2"
rand = "0.7"
structopt = "0.3"